# t4code

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  addproject-check.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.shared.ts  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: desktop-bridge.toml  preview.toml
apps/desktop/src-tauri/src/: backend.rs  bridge.rs  config.rs  context_menu.rs  errors.rs  lib.rs  main.rs  security.rs  shell_environment.rs  ssh.rs  tailscale.rs  updates.rs  window.rs
apps/desktop/src-tauri/src/preview/: commands.rs  host.rs  mod.rs  registry.rs
apps/desktop/src-tauri/tests/: bridge_public_contract.rs  ssh_public_contract.rs  windows_embedded_terminal.rs
apps/server/: Cargo.toml  package.json
apps/server/coverage-agent-mgr-base/: coverage-final.json
apps/server/coverage-agent-ps-json/: coverage-final.json
apps/server/integration/: OrchestrationEngineHarness.integration.ts  orchestrationEngine.integration.test.ts
apps/server/scripts/: cli.ts
apps/server/src/: bin.test.ts  bin.ts  bootstrap.test.ts  config.rs  crypto.rs  diagnostic_bundle.rs  http.rs  keybindings.test.ts  lib.rs  lifecycle.rs  logging.rs  main.rs  processRunner.test.ts  server.test.ts  server.ts  serverRuntimeStartup.ts  startupAccess.ts  ws.ts
apps/server/src/assets/: mod.rs
apps/server/src/auth/: ServerSecretStore.test.ts  dpop.rs  http.rs  mod.rs  model.rs  rpc.rs  scope.rs  secret_store.rs  service.rs  token.rs  utils.test.ts
apps/server/src/checkpointing/: mod.rs
apps/server/src/cli/: config.test.ts  connect.ts  server.ts
apps/server/src/cloud/: CliState.test.ts  CliState.ts  CliTokenManager.ts  http.ts  mod.rs
apps/server/src/diagnostics/: ProcessDiagnostics.test.ts  ProcessDiagnostics.ts  ProcessResourceMonitor.test.ts  ProcessResourceMonitor.ts  attribution.rs  history.rs  mod.rs  model.rs  monitor.rs  native.rs  registry.rs  resource_sampler.rs  trace.rs
apps/server/src/environment/: ServerEnvironmentLabel.ts
apps/server/src/git/: GitManager.test.ts  GitManager.ts  GitWorkflowService.ts  broadcaster.rs  mod.rs  model.rs  parser.rs  process.rs  repository.rs
apps/server/src/mcp/: McpHttpServer.ts  mod.rs  preview_automation.rs
apps/server/src/observability/: mod.rs
apps/server/src/orchestration/: commandInvariants.ts  decider.ts  engine.rs  mod.rs  projector.ts
apps/server/src/orchestration/Layers/: CheckpointReactor.test.ts  OrchestrationEngine.test.ts  OrchestrationEngine.ts  ProjectionPipeline.test.ts  ProjectionPipeline.ts  (+3 more)
apps/server/src/persistence/: Migrations.ts  database.rs  migrations.rs  mod.rs  repositories.rs  state_files.rs
apps/server/src/preview/: PortScanner.test.ts  mod.rs
apps/server/src/process/: background.rs  cleanup.rs  executable.rs  externalLauncher.test.ts  mod.rs  runner.rs  shell.rs  supervised.rs  windows_job.rs
apps/server/src/production/: connect_mcp.rs  control.rs  git_vcs.rs  host_paths.rs  http_routes.rs  jwt.rs  keybindings.rs  local_servers.rs  managed_endpoint.rs  mod.rs  operational_logs.rs  orchestration_effects.rs  orchestration_rpc.rs  provider_inventory.rs  provider_runtime.rs  relay.rs  runtime.rs  server_terminal.rs  workspace_preview.rs  worktree_workspace.rs
apps/server/src/project/: ProjectFaviconResolver.test.ts  mod.rs
apps/server/src/provider/: CodexDeveloperInstructions.ts  acp_mode.rs  attachments.rs  mod.rs  opencodeRuntime.test.ts  opencodeRuntime.ts  providerMaintenance.test.ts  providerMaintenanceRunner.test.ts  providerMaintenanceRunner.ts  providerStatusCache.test.ts
apps/server/src/providerUsage/: ProviderUsageService.test.ts  ProviderUsageService.ts  claudeUsageFetcher.test.ts  claudeUsageFetcher.ts  codexUsageFetcher.test.ts  codexUsageFetcher.ts
apps/server/src/provider_usage/: codex_backend.rs  mod.rs
apps/server/src/relay/: AgentAwarenessRelay.test.ts  AgentAwarenessRelay.ts
apps/server/src/review/: ReviewService.test.ts  ReviewService.ts  mod.rs
apps/server/src/rpc/: message.rs  methods.rs  mod.rs  session.rs
apps/server/src/server_settings/: mod.rs
apps/server/src/sourceControl/: SourceControlRepositoryService.test.ts
apps/server/src/source_control/: discovery.rs  mod.rs  pull_request.rs
apps/server/src/telemetry/: mod.rs
apps/server/src/terminal/: history.rs  manager.rs  mod.rs  model.rs  osc.rs  pty.rs
apps/server/src/textGeneration/: ClaudeTextGeneration.test.ts  CodexTextGeneration.test.ts  CursorTextGeneration.test.ts  GrokTextGeneration.test.ts  OpenCodeTextGeneration.ts
apps/server/src/text_generation/: mod.rs
apps/server/src/vcs/: GitVcsDriver.ts  GitVcsDriverCore.test.ts  GitVcsDriverCore.ts  VcsStatusBroadcaster.test.ts  mod.rs
apps/server/src/workspace/: WorkspaceFileSystem.test.ts  WorkspaceFileSystem.ts  entries.rs  error.rs  mod.rs  paths.rs  rpc.rs  search.rs  service.rs  watcher.rs
apps/server/tests/: auth_http.rs  cli_smoke.rs  cloud_observability_text_generation_domain.rs  crypto_compat.rs  diagnostic_bundle.rs  git_coverage.rs  git_rpc.rs  orchestration.rs  persistence_compat.rs  preview_automation_domain.rs  preview_domain.rs  process_runner.rs  production_connect_mcp.rs  production_control.rs  production_git_vcs_rpc.rs  production_http_routes.rs  production_jwt.rs  production_operational_logs.rs  production_orchestration_effects.rs  production_orchestration_rpc.rs  production_provider_runtime.rs  production_relay.rs  production_server_terminal_rpc.rs  production_workspace_preview_rpc.rs  provider_claude.rs  provider_codex.rs  provider_cursor.rs  provider_grok.rs  provider_opencode.rs  provider_usage_domain.rs  repositories.rs  rpc_wire.rs  server_runtime.rs  server_settings_domain.rs  telemetry_domain.rs  terminal_default_shell.rs  terminal_powershell_prediction.rs  terminal_rpc.rs  trace_diagnostics.rs  windows_background_process.rs  (+2 more)
apps/server/tests/fixtures/: orchestration-task9-trace.json  terminal-rpc-wire.json
(+1219 files in other folders)
