[workspace]
members = ["apps/desktop/src-tauri", "apps/server"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
axum = { version = "0.8.9", features = ["form", "http1", "json", "tokio", "ws"] }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["pem", "pkcs8"] }
futures-util = { version = "0.3.32", features = ["sink"] }
getrandom = "0.3.4"
hmac = "0.12.1"
httpdate = "1.0.3"
mime_guess = "2.0.5"
open = "5.3.6"
percent-encoding = "2.3.2"
p256 = { version = "0.13.2", features = ["ecdsa"] }
portpicker = "0.1.1"
portable-pty = "0.9.0"
process-wrap = { version = "9.1.0", features = ["tokio1"] }
reqwest = { version = "0.13.4", default-features = false, features = ["form", "json", "rustls"] }
rusqlite = { version = "0.40.1", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.37"
subtle = "2.6.1"
t4code-server = { path = "apps/server" }
tauri = { version = "2.11.5", features = [] }
tauri-build = { version = "2.6.3", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.3"
tauri-plugin-updater = "2.10.1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { version = "0.7.18", features = ["io", "rt"] }
tokio-tungstenite = "0.29.0"
toml = "0.9.8"
tower-http = { version = "0.6.11", features = ["cors"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
windows-sys = "0.61.2"

[workspace.dependencies.tempfile]
version = "3.27.0"

[workspace.lints.rust]
warnings = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
