[package]
name = "t4code-desktop"
version = "0.2.4"
description = "T4Code Tauri desktop shell"
authors = ["T4 Tools"]
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
name = "t4code_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
desktop-e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
base64.workspace = true
libc.workspace = true
portpicker.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
t4code-server.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-store.workspace = true
tauri-plugin-updater.workspace = true
tauri-plugin-wdio = { workspace = true, optional = true }
tauri-plugin-wdio-webdriver = { workspace = true, optional = true }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[dev-dependencies]
futures-util.workspace = true
tauri = { workspace = true, features = ["test"] }
tempfile.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true

[lints]
workspace = true
