[package]
name = "t4code-desktop"
version = "0.2.5"
description = "T4Code Tauri desktop shell"
authors = ["T4 Tools"]
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
name = "t4code_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
desktop-e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
base64.workspace = true
libc.workspace = true
portpicker.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
t4code-server.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-store.workspace = true
tauri-plugin-updater.workspace = true
tauri-plugin-wdio = { workspace = true, optional = true }
tauri-plugin-wdio-webdriver = { workspace = true, optional = true }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSBitmapImageRep", "NSGraphics"] }
objc2-web-kit = { version = "0.3", features = [
  "WKWebView",
  "WKWebViewConfiguration",
  "WKWebsiteDataStore",
  "WKBackForwardList",
] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Memory",
] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_40"] }
gtk = "0.18"
cairo-rs = { version = "0.18", features = ["png"] }

[dev-dependencies]
futures-util.workspace = true
tauri = { workspace = true, features = ["test"] }
tempfile.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true

[lints]
workspace = true
