[package]
name = "t4code-desktop"
version = "0.2.10"
description = "T4Code Tauri desktop shell"
authors = ["T4 Tools"]
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
name = "t4code_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
desktop-e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
base64.workspace = true
libc.workspace = true
portpicker.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
t4code-server.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-store.workspace = true
tauri-plugin-updater.workspace = true
tauri-plugin-wdio = { workspace = true, optional = true }
tauri-plugin-wdio-webdriver = { workspace = true, optional = true }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
objc2-web-kit = { workspace = true, features = [
  "WKWebView",
  "WKWebViewConfiguration",
  "WKWebsiteDataStore",
  "WKBackForwardList",
] }
block2.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com.workspace = true
windows = { workspace = true, features = [
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Memory",
] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk.workspace = true
gtk.workspace = true
cairo-rs.workspace = true

[dev-dependencies]
futures-util.workspace = true
tauri = { workspace = true, features = ["test"] }
tempfile.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true

[lints]
workspace = true
