[package]
name = "t4code-task8-harness"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
base64 = "0.22.1"
portable-pty = { path = "../../../../../third_party/portable-pty" }
process-wrap = { version = "9.1.0", features = ["tokio1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "sync",
  "test-util",
  "time",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
xpty = "0.3.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Wdk_System_Threading",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_JobObjects",
  "Win32_System_Kernel",
  "Win32_System_Threading",
] }
windows = { version = "0.62.2", features = ["Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.27.0"

[lints.rust]
warnings = "deny"
