[package]
name = "t4code-task9-harness"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
tokio-util = "0.7"
uuid = { version = "1.18", features = ["v4"] }
url = "2.5"
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.23"

[workspace]
